force-app/main/default/objects/Customer/fields/First_Applicant_Contact__c.field-meta.xml
<CustomField>
    <fullName>First_Applicant_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Applicant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>