force-app/main/default/objects/Customer/fields/MortgagX_Broker_ID__c.field-meta.xml
<CustomField>
    <fullName>MortgagX_Broker_ID__c</fullName>
    <label>MortgagX Broker ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>