force-app/main/default/objects/Customer/fields/Second_Applicant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Second_Applicant_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Applicant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customers (Second Applicant Contact)</relationshipLabel>
    <relationshipName>CustomersX</relationshipName>
    <type>Lookup</type>
</CustomField>